--- a/app/js/templates/app.html
+++ b/app/js/templates/app.html
@@ -1,15 +1,15 @@
 <div class="row-fluid">
-	<div id="lists-panel" class="span2 main-left-col">
-		<h1>bTask</h1>
-		<div class="left-nav"></div>
-	</div>
-	<div class="main-right-col">
-		<small id="profile-container" class="pull-right"></small>
-		<div>
-			<div id="sign-in-container"></div>
-			<div id="signed-in-container">
-				<p>You're signed in!</p>
-			</div>
-		</div>
-	</div>
+  <div class="span2 main-left-col" id="lists-panel">
+    <h1>bTask</h1>
+    <div class="left-nav"></div>
+  </div>
+  <div class="main-right-col">
+    <small class="pull-right" id="profile-container"></small>
+    <div>
+      <div id="sign-in-container"></div>
+      <div id="signed-in-container">
+        <p>You're signed in!</p>
+      </div>
+    </div>
+  </div>
 </div>
